--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0664.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0664.html
@@ -17,8 +17,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 482 94 708 129">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’lIANl</ins>
-            <del title="nlp 0.90">’lIANl</del>
+            <ins title="nlp 2.00">STEPHANI</ins>
           </span>
         </span>
         <span id="w_2" class="ocr_word" title="bbox 731 93 772 126">
@@ -40,8 +39,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 930 88 1358 124">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IXTERPKETATIONE</ins>
-            <del title="nlp 0.90">IXTERPKETATIONE</del>
+            <ins title="nlp 2.00">INTERPRETATIONE</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1377 87 1501 132">
@@ -122,14 +120,9 @@
             <ins class="alt" title="nlp 1.00">λέγειν</ins>
           </span>
         </span>
-        <span id="w_21" class="ocr_word" title="bbox 1599 202 1607 216" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">῾</ins>
-          </span>
-        </span>
         <span id="w_22" class="ocr_word" title="bbox 1621 205 1640 244" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins class="alt" title="nlp 2.00">῾ὁ</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 1679 204 1884 258" lang="grc">
@@ -211,16 +204,11 @@
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1963 288 2023 312" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄν-</ins>
+            <ins title="nlp 2.00">ἄνθρωπος,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 356 340 2021 400">
-        <span id="w_39" class="ocr_word" title="bbox 356 346 524 400" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θρωπος,</ins>
-          </span>
-        </span>
         <span id="w_40" class="ocr_word" title="bbox 556 361 706 389" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πάντως</ins>
@@ -692,16 +680,11 @@
         </span>
         <span id="w_131" class="ocr_word" title="bbox 1868 820 2025 859" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προτάτ-</ins>
+            <ins title="nlp 2.00">προτάττονται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 356 888 2096 947">
-        <span id="w_132" class="ocr_word" title="bbox 356 909 482 934" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τονται</ins>
-          </span>
-        </span>
         <span id="w_133" class="ocr_word" title="bbox 511 909 586 933" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
@@ -749,8 +732,7 @@
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1988 906 1991 932">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">i</ins>
-            <del title="nlp 0.90">i</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 2015 897 2096 926">
@@ -1284,9 +1266,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_247" class="ocr_word" title="bbox 410 1591 527 1625">
+        <span id="w_247_0" class="ocr_word" title="bbox 410 1591 527 1625">
           <span class="alternatives">
-            <ins title="nlp 2.00">23α11</ins>
+            <ins class="alt" title="nlp 2.00">22a11</ins>
+          </span>
+        </span>
+        <span id="w_247_1" class="ocr_word" title="bbox 410 1591 527 1625">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 591 1579 683 1621" lang="grc">
@@ -1322,11 +1309,6 @@
         <span id="w_254" class="ocr_word" title="bbox 1593 1591 1731 1615" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">μόνον</ins>
-          </span>
-        </span>
-        <span id="w_255" class="ocr_word" title="bbox 1821 1591 2025 1616" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δύναμις.</ins>
           </span>
         </span>
       </span>
@@ -1569,16 +1551,11 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1931 1867 2029 1906" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐνέρ-</ins>
+            <ins title="nlp 2.00">ἐνέργειαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 361 1921 2030 1978">
-        <span id="w_303" class="ocr_word" title="bbox 361 1940 463 1978" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γειαν</ins>
-          </span>
-        </span>
         <span id="w_304" class="ocr_word" title="bbox 496 1940 534 1963" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
@@ -1631,16 +1608,11 @@
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1924 1921 2030 1960" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυνά-</ins>
+            <ins title="nlp 2.00">δυνάμεως</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 363 1989 2027 2048">
-        <span id="w_315" class="ocr_word" title="bbox 363 2009 465 2048" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μεως</ins>
-          </span>
-        </span>
         <span id="w_316" class="ocr_word" title="bbox 495 2008 563 2047" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
@@ -2011,9 +1983,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_387" class="ocr_word" title="bbox 417 2484 536 2518">
+        <span id="w_387_0" class="ocr_word" title="bbox 417 2484 536 2518">
           <span class="alternatives">
-            <ins title="nlp 2.00">23α23</ins>
+            <ins class="alt" title="nlp 2.00">23a23</ins>
+          </span>
+        </span>
+        <span id="w_387_1" class="ocr_word" title="bbox 417 2484 536 2518">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_388" class="ocr_word" title="bbox 596 2468 685 2513" lang="grc">
@@ -2054,11 +2031,6 @@
         <span id="w_395" class="ocr_word" title="bbox 1846 2470 1940 2509" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἶον</ins>
-          </span>
-        </span>
-        <span id="w_396" class="ocr_word" title="bbox 1987 2486 2030 2510" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἰ</ins>
           </span>
         </span>
       </span>
@@ -2197,14 +2169,14 @@
             <ins class="alt" title="nlp 1.00">δύναμιν</ins>
           </span>
         </span>
-        <span id="w_423_0" class="ocr_word" title="bbox 554 2695 740 2734">
+        <span id="w_423_0_0" class="ocr_word" title="bbox 554 2695 740 2734">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ἐνεργειας</ins>
+            <ins class="alt" title="nlp 2.00">ενεργειας</ins>
           </span>
         </span>
-        <span id="w_423_1" class="ocr_word" title="bbox 554 2695 740 2734">
+        <span id="w_423_0_1" class="ocr_word" title="bbox 554 2695 740 2734">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χηρευουσαν.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2215,9 +2187,14 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_425" class="ocr_word" title="bbox 420 2760 541 2792">
+        <span id="w_425_0" class="ocr_word" title="bbox 420 2760 541 2792">
           <span class="alternatives">
-            <ins title="nlp 2.00">23α24</ins>
+            <ins class="alt" title="nlp 2.00">23a24</ins>
+          </span>
+        </span>
+        <span id="w_425_1" class="ocr_word" title="bbox 420 2760 541 2792">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_426" class="ocr_word" title="bbox 601 2746 666 2788">
@@ -2268,11 +2245,6 @@
         <span id="w_435_0" class="ocr_word" title="bbox 1987 2746 2033 2785">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_435_1" class="ocr_word" title="bbox 1987 2746 2033 2785">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -2512,8 +2484,7 @@
         </span>
         <span id="w_480" class="ocr_word" title="bbox 1060 3083 1118 3115">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P-:</ins>
-            <del title="nlp 0.90">P-:</del>
+            <ins title="nlp 2.00">P2:</ins>
           </span>
         </span>
         <span id="w_481" class="ocr_word" title="bbox 1145 3087 1238 3116" lang="grc">
@@ -2523,8 +2494,7 @@
         </span>
         <span id="w_482" class="ocr_word" title="bbox 1263 3082 1303 3116">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
         <span id="w_483" class="ocr_word" title="bbox 1455 3081 1497 3115">
