--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0582.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0582.html
@@ -1262,11 +1262,6 @@
             <ins title="nlp 2.00">ἐνασχολεῖσθαι 92,7 93,14</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 1751 374 1854 416">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">93,14</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 1291 432 1699 477">
         <span id="w_221" class="ocr_word" title="bbox 1291 435 1546 475" lang="grc">
@@ -1678,20 +1673,19 @@
             <ins class="alt" title="nlp 1.00">πολλά</ins>
           </span>
         </span>
-        <span id="w_292" class="ocr_word" title="bbox 1736 1493 1860 1536" lang="grc">
+        <span id="w_292_0" class="ocr_word" title="bbox 1736 1493 1860 1536">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ι24,28</ins>
+            <ins class="alt" title="nlp 2.00">124,28</ins>
+          </span>
+        </span>
+        <span id="w_292_1" class="ocr_word" title="bbox 1736 1493 1860 1536">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1890 1493 2012 1535">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">195,24</ins>
-          </span>
-        </span>
-        <span id="w_294" class="ocr_word" title="bbox 2028 1504 2078 1537">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sq.</ins>
-            <del title="nlp 0.90">sq.</del>
           </span>
         </span>
       </span>
@@ -2126,9 +2120,14 @@
             <ins title="nlp 2.00">ἐπιθυμία</ins>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 1520 2734 1662 2779" lang="grc">
+        <span id="w_373_0" class="ocr_word" title="bbox 1520 2734 1662 2779">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ζωτικὴ</ins>
+            <ins class="alt" title="nlp 2.00">(ζωτικὴ</ins>
+          </span>
+        </span>
+        <span id="w_373_1" class="ocr_word" title="bbox 1520 2734 1662 2779">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_374" class="ocr_word" title="bbox 1690 2732 1840 2777" lang="grc">
@@ -2139,11 +2138,6 @@
         <span id="w_375" class="ocr_word" title="bbox 1865 2731 1969 2772">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">56,12</ins>
-          </span>
-        </span>
-        <span id="w_376" class="ocr_word" title="bbox 1998 2731 2146 2776">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">79,9.23</ins>
           </span>
         </span>
       </span>
@@ -2225,14 +2219,9 @@
             <ins class="alt" title="nlp 1.00">ἐπινοίαις</ins>
           </span>
         </span>
-        <span id="w_391" class="ocr_word" title="bbox 1679 2911 1693 2943">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
         <span id="w_392" class="ocr_word" title="bbox 1702 2909 1802 2953">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">10,24</ins>
+            <ins class="alt" title="nlp 2.00">110,24</ins>
           </span>
         </span>
         <span id="w_393" class="ocr_word" title="bbox 1811 2920 1860 2954">
