--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0526.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0526.html
@@ -491,12 +491,7 @@
         </span>
         <span id="w_93_0" class="ocr_word" title="bbox 1997 646 2138 683">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">ταῦτα</ins>
-          </span>
-        </span>
-        <span id="w_93_1" class="ocr_word" title="bbox 1997 646 2138 683">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">ταῦτα;</ins>
           </span>
         </span>
       </span>
@@ -1811,11 +1806,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 382 2844 2043 2894">
-        <span id="w_343" class="ocr_word" title="bbox 382 2861 583 2894" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γορούμενον</ins>
-          </span>
-        </span>
         <span id="w_344" class="ocr_word" title="bbox 610 2849 670 2882">
           <span class="alternatives">
             <ins title="nlp 2.00">TV</ins>
@@ -1917,12 +1907,7 @@
         </span>
         <span id="w_363" class="ocr_word" title="bbox 1169 2907 1294 2950">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_364" class="ocr_word" title="bbox 1304 2917 1312 2939">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 1339 2916 1374 2940" lang="grc">
@@ -2096,12 +2081,7 @@
         </span>
         <span id="w_398_0" class="ocr_word" title="bbox 1593 3026 1642 3054">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V1</ins>
-          </span>
-        </span>
-        <span id="w_398_1" class="ocr_word" title="bbox 1593 3026 1642 3054">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V1:</ins>
           </span>
         </span>
         <span id="w_399_0" class="ocr_word" title="bbox 1670 3020 1786 3057">
@@ -2275,7 +2255,7 @@
         </span>
         <span id="w_429" class="ocr_word" title="bbox 1969 3134 2035 3180" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">V1 εἴη] ἢ V1</ins>
+            <ins title="nlp 2.00">εἴη] ἢ V1</ins>
           </span>
         </span>
       </span>
