--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0665.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0665.html
@@ -57,9 +57,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 1466 132 1530 163">
+        <span id="w_8_0" class="ocr_word" title="bbox 1466 132 1530 163">
           <span class="alternatives">
-            <ins title="nlp 2.00">23α27]</ins>
+            <ins class="alt" title="nlp 2.00">23a27</ins>
           </span>
         </span>
       </span>
@@ -93,17 +93,17 @@
         </span>
         <span id="w_15" class="ocr_word" title="bbox 837 258 1059 298" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀτιμοτέρου</ins>
+            <ins class="alt" title="nlp 2.00">ἀτιμοτέρου•</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1073 260 1082 269">
+        <span id="w_18_0" class="ocr_word" title="bbox 1156 261 1209 284">
           <span class="alternatives">
-            <ins title="nlp 2.00">•</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1156 261 1209 284" lang="grc">
+        <span id="w_18_1" class="ocr_word" title="bbox 1156 261 1209 284">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1244 261 1285 285" lang="grc">
@@ -228,14 +228,14 @@
             <ins class="alt" title="nlp 1.00">τμήματος.</ins>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 1160 583 1346 638" lang="grc">
+        <span id="w_42_0" class="ocr_word" title="bbox 1160 583 1346 638">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; Πρᾶξις </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;Πρᾶξις</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1377 582 1431 636">
+        <span id="w_42_1" class="ocr_word" title="bbox 1160 583 1346 638">
           <span class="alternatives">
-            <ins title="nlp 2.00">α&amp;#x772;. &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">α&amp;#x772;.&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -702,9 +702,9 @@
             <ins class="alt" title="nlp 1.00">οὔσης</ins>
           </span>
         </span>
-        <span id="w_134" class="ocr_word" title="bbox 1607 1304 1809 1360" lang="grc">
+        <span id="w_134_0" class="ocr_word" title="bbox 1607 1304 1809 1360">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ἐχούσης &amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἐχούσης&amp;#x003E;</ins>
           </span>
         </span>
       </span>
@@ -1762,13 +1762,8 @@
         </span>
         <span id="w_333" class="ocr_word" title="bbox 460 2993 583 3035">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripsi</ins>
+            <ins class="alt" title="nlp 2.00">scripsi:</ins>
             <del title="nlp 0.90">scripsi</del>
-          </span>
-        </span>
-        <span id="w_334" class="ocr_word" title="bbox 594 3005 601 3024">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
           </span>
         </span>
         <span id="w_335" class="ocr_word" title="bbox 634 3003 715 3036" lang="grc">
@@ -1844,12 +1839,7 @@
         </span>
         <span id="w_348" class="ocr_word" title="bbox 471 3051 596 3094">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_349" class="ocr_word" title="bbox 606 3061 613 3082">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 638 3053 706 3082" lang="grc">
@@ -1971,8 +1961,7 @@
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1432 3110 1462 3131">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">v-.</ins>
-            <del title="nlp 0.90">v-.</del>
+            <ins title="nlp 2.00">v:</ins>
           </span>
         </span>
         <span id="w_373" class="ocr_word" title="bbox 1489 3098 1677 3143" lang="grc">
