--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0527.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0527.html
@@ -206,14 +206,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1434 574 1683 599" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1434 574 1683 599">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἴδους</ins>
+            <ins class="alt" title="nlp 2.00">εἰὸικωτάτου</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 1717 559 1839 602" lang="grc">
+        <span id="w_37_1" class="ocr_word" title="bbox 1434 574 1683 599">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἴδους</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -665,9 +665,14 @@
             <ins class="alt" title="nlp 1.00">εἶναι,</ins>
           </span>
         </span>
-        <span id="w_123" class="ocr_word" title="bbox 486 1773 489 1826">
+        <span id="w_123_0" class="ocr_word" title="bbox 486 1773 489 1826">
           <span class="alternatives">
-            <ins title="nlp 2.00">I</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_123_1" class="ocr_word" title="bbox 486 1773 489 1826">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 519 1787 598 1813" lang="grc">
@@ -723,11 +728,6 @@
         <span id="w_133" class="ocr_word" title="bbox 1598 1767 1809 1820" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνθρώπῳ,</ins>
-          </span>
-        </span>
-        <span id="w_134" class="ocr_word" title="bbox 1828 1770 1916 1805">
-          <span class="alternatives">
-            <ins title="nlp 2.00">198r</ins>
           </span>
         </span>
       </span>
@@ -2022,20 +2022,20 @@
             <ins class="alt" title="nlp 1.00">24</ins>
           </span>
         </span>
-        <span id="w_383" class="ocr_word" title="bbox 180 3198 236 3229">
+        <span id="w_383_0" class="ocr_word" title="bbox 180 3198 236 3229">
           <span class="alternatives">
-            <ins title="nlp 2.00">τπῦ</ins>
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
+          </span>
+        </span>
+        <span id="w_383_1" class="ocr_word" title="bbox 180 3198 236 3229">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 264 3206 328 3229">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_385" class="ocr_word" title="bbox 355 3196 387 3229">
-          <span class="alternatives">
-            <ins title="nlp 2.00">K</ins>
           </span>
         </span>
       </span>
