--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0583.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0583.html
@@ -39,8 +39,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 331 239 396 273">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">clef.</ins>
-            <del title="nlp 0.90">clef.</del>
+            <ins title="nlp 2.00">def.</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 424 240 526 280">
@@ -376,14 +375,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 80 1117 492 1165">
-        <span id="w_65" class="ocr_word" title="bbox 80 1123 364 1165" lang="grc">
+        <span id="w_65_0" class="ocr_word" title="bbox 80 1123 364 1165">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἑτερόριστος </ins>
+            <ins class="alt" title="nlp 2.00">*ἑτερόριστος</ins>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 391 1117 492 1160">
+        <span id="w_65_1" class="ocr_word" title="bbox 80 1123 364 1165">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">14,24</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -402,7 +401,7 @@
       <span class="ocr_line" title="bbox 81 1234 680 1284">
         <span id="w_69" class="ocr_word" title="bbox 81 1244 298 1284" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἑτεροϋπόστατος</ins>
+            <ins title="nlp 2.00">ἑτεροϋπόστατος</ins>
           </span>
         </span>
         <span id="w_70_0" class="ocr_word" title="bbox 486 1235 498 1267">
@@ -814,8 +813,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 749 2932 830 2964">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dekl</ins>
-            <del title="nlp 0.90">dekl</del>
+            <ins title="nlp 2.00">delet</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 846 2928 969 2971">
@@ -936,19 +934,19 @@
             <ins class="alt" title="nlp 1.00">ἥλιος</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1181 299 1742 344" lang="grc">
+        <span id="w_159_0" class="ocr_word" title="bbox 1181 299 1742 344">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἑκατονταεβδομηκονταπλασίων</ins>
+            <ins class="alt" title="nlp 2.00">(ἑκατονταεβδομηκονταπλασίων</ins>
+          </span>
+        </span>
+        <span id="w_159_1" class="ocr_word" title="bbox 1181 299 1742 344">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_160" class="ocr_word" title="bbox 1763 312 1822 344" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_161" class="ocr_word" title="bbox 1840 301 1915 344" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γῆς)</ins>
           </span>
         </span>
       </span>
@@ -1215,7 +1213,7 @@
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1342 1117 1379 1151" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00"> τὸ θεολογικόν 5,8 sq. 57,17.27</ins>
+            <ins title="nlp 2.00">τὸ θεολογικόν 5,8 sq. 57,17.27</ins>
           </span>
         </span>
       </span>
@@ -1352,14 +1350,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1026 1526 1407 1572">
-        <span id="w_235" class="ocr_word" title="bbox 1026 1526 1254 1572" lang="grc">
+        <span id="w_235_0" class="ocr_word" title="bbox 1026 1526 1254 1572">
           <span class="alternatives">
-            <ins title="nlp 2.00">*θνητότης</ins>
+            <ins class="alt" title="nlp 2.00">*θνητότης</ins>
           </span>
         </span>
-        <span id="w_236" class="ocr_word" title="bbox 1284 1526 1407 1568">
+        <span id="w_235_1" class="ocr_word" title="bbox 1026 1526 1254 1572">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">198,23</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1696,9 +1694,14 @@
             <ins class="alt" title="nlp 2.00">ἵνα</ins>
           </span>
         </span>
-        <span id="w_295_1" class="ocr_word" title="bbox 1809 2533 1859 2553">
+        <span id="w_295_1_0" class="ocr_word" title="bbox 1809 2533 1859 2553">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">..</ins>
+            <ins class="alt" title="nlp 2.00">.</ins>
+          </span>
+        </span>
+        <span id="w_295_1_1" class="ocr_word" title="bbox 1809 2533 1859 2553">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">.</ins>
           </span>
         </span>
       </span>
