--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0616.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0616.html
@@ -1164,12 +1164,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1162 1484 1226 1525" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὖν</ins>
-          </span>
-        </span>
-        <span id="w_225" class="ocr_word" title="bbox 1243 1500 1250 1530">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
+            <ins class="alt" title="nlp 2.00">οὖν;</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1283 1502 1355 1540" lang="grc">
@@ -2303,16 +2298,26 @@
             <ins class="alt" title="nlp 1.00">ἰδοὺ</ins>
           </span>
         </span>
-        <span id="w_446" class="ocr_word" title="bbox 1916 2789 1980 2829" lang="grc">
+        <span id="w_446_0" class="ocr_word" title="bbox 1916 2789 1980 2829">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐνπροσσημαίνουσα</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_446_1" class="ocr_word" title="bbox 1916 2789 1980 2829">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἐνπροσσημαίνουσα</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 327 2947 2134 2998">
-        <span id="w_447" class="ocr_word" title="bbox 327 2952 348 2987">
+        <span id="w_447_0" class="ocr_word" title="bbox 327 2952 348 2987">
           <span class="alternatives">
-            <ins title="nlp 2.00">6</ins>
+            <ins class="alt" title="nlp 2.00">5</ins>
+          </span>
+        </span>
+        <span id="w_447_1" class="ocr_word" title="bbox 327 2952 348 2987">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_449" class="ocr_word" title="bbox 687 2952 810 2995">
@@ -2367,15 +2372,9 @@
             <ins class="alt" title="nlp 1.00">λέγομεν</ins>
           </span>
         </span>
-        <span id="w_460" class="ocr_word" title="bbox 1977 2947 2066 2992">
+        <span id="w_460_0" class="ocr_word" title="bbox 1977 2947 2066 2992">
           <span class="alternatives">
-            <ins title="nlp 2.00">κτη.]</ins>
-          </span>
-        </span>
-        <span id="w_461" class="ocr_word" title="bbox 2093 2948 2134 2981">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cf.</ins>
-            <del title="nlp 0.90">cf.</del>
+            <ins class="alt" title="nlp 2.00">κτλ.]</ins>
           </span>
         </span>
       </span>
@@ -2441,8 +2440,7 @@
         </span>
         <span id="w_474" class="ocr_word" title="bbox 1834 3018 1975 3044">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TtTwasi;</ins>
-            <del title="nlp 0.90">TtTwasi;</del>
+            <ins title="nlp 2.00">πτώσεις</ins>
           </span>
         </span>
         <span id="w_475" class="ocr_word" title="bbox 2001 3007 2136 3050">
@@ -2471,8 +2469,7 @@
         </span>
         <span id="w_479" class="ocr_word" title="bbox 514 3069 673 3102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ammou.</ins>
-            <del title="nlp 0.90">Ammou.</del>
+            <ins title="nlp 2.00">Ammon.</ins>
           </span>
         </span>
         <span id="w_480" class="ocr_word" title="bbox 699 3067 758 3101">
@@ -2481,9 +2478,14 @@
             <del title="nlp 0.90">fol.</del>
           </span>
         </span>
-        <span id="w_481" class="ocr_word" title="bbox 775 3066 820 3100">
+        <span id="w_481_0" class="ocr_word" title="bbox 775 3066 820 3100">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">43v</ins>
+            <ins class="alt" title="nlp 2.00">43v:</ins>
+          </span>
+        </span>
+        <span id="w_481_1" class="ocr_word" title="bbox 775 3066 820 3100">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_483" class="ocr_word" title="bbox 888 3077 1060 3114" lang="grc">
@@ -2521,11 +2523,6 @@
         <span id="w_489_0" class="ocr_word" title="bbox 1823 3065 1970 3112">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">ῥήματος</ins>
-          </span>
-        </span>
-        <span id="w_489_1" class="ocr_word" title="bbox 1823 3065 1970 3112">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
       </span>
@@ -2569,8 +2566,7 @@
         </span>
         <span id="w_497" class="ocr_word" title="bbox 1237 3125 1277 3158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">P1</ins>
           </span>
         </span>
         <span id="w_498" class="ocr_word" title="bbox 1421 3124 1464 3157">
