--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0584.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0584.html
@@ -125,8 +125,7 @@
         </span>
         <span id="w_20" class="ocr_word" title="bbox 1037 391 1116 424">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tlist.</ins>
-            <del title="nlp 0.90">tlist.</del>
+            <ins title="nlp 2.00">dist.</ins>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 1145 397 1221 423" lang="grc">
@@ -288,8 +287,7 @@
       <span class="ocr_line" title="bbox 350 862 1227 909">
         <span id="w_47" class="ocr_word" title="bbox 350 869 425 902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xofv</ins>
-            <del title="nlp 0.90">xofv</del>
+            <ins title="nlp 2.00">κἄν</ins>
           </span>
         </span>
         <span id="w_48" class="ocr_word" title="bbox 445 880 520 902">
@@ -300,8 +298,7 @@
         </span>
         <span id="w_49" class="ocr_word" title="bbox 542 869 613 901">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iiid.</ins>
-            <del title="nlp 0.90">iiid.</del>
+            <ins title="nlp 2.00">ind.</ins>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 636 867 758 909">
@@ -801,19 +798,19 @@
             <ins class="alt" title="nlp 1.00">κοινός.</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 569 2348 691 2381" lang="grc">
+        <span id="w_136_0" class="ocr_word" title="bbox 569 2348 691 2381">
           <span class="alternatives">
-            <ins title="nlp 2.00">χοινῶς</ins>
+            <ins class="alt" title="nlp 2.00">κοινῶς</ins>
+          </span>
+        </span>
+        <span id="w_136_1" class="ocr_word" title="bbox 569 2348 691 2381">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 721 2343 819 2384">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">140,5</ins>
-          </span>
-        </span>
-        <span id="w_138" class="ocr_word" title="bbox 850 2341 948 2381">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">142,7</ins>
           </span>
         </span>
       </span>
@@ -904,9 +901,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 371 2696 750 2744">
-        <span id="w_153" class="ocr_word" title="bbox 371 2713 391 2733" lang="grc">
+        <span id="w_153_0" class="ocr_word" title="bbox 371 2713 391 2733">
           <span class="alternatives">
-            <ins title="nlp 2.00">χροχόδειλος 89,5</ins>
+            <ins class="alt" title="nlp 2.00">κροκόδειλος</ins>
+          </span>
+        </span>
+        <span id="w_153_1" class="ocr_word" title="bbox 371 2713 391 2733">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">89,5</ins>
           </span>
         </span>
       </span>
@@ -1264,14 +1266,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1280 739 1679 786">
-        <span id="w_217" class="ocr_word" title="bbox 1280 740 1525 786" lang="grc">
+        <span id="w_217_0" class="ocr_word" title="bbox 1280 740 1525 786">
           <span class="alternatives">
-            <ins title="nlp 2.00">*λογικότης</ins>
+            <ins class="alt" title="nlp 2.00">*λογικότης</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1554 739 1679 781">
+        <span id="w_217_1" class="ocr_word" title="bbox 1280 740 1525 786">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">198,23</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
